@@ -21,6 +21,20 @@ run {
                 "--add-opens=java.base/java.util=org.apache.commons.lang3",
                 "--add-opens=java.base/java.lang=org.apache.commons.lang3",
                 "--add-opens=java.base/java.time=org.apache.commons.lang3",
+                "--add-opens=java.base/java.util.zip=org.apache.commons.lang3",
+                "--add-opens=java.base/jdk.internal.ref=org.apache.commons.lang3",
+                "--add-opens=java.base/java.io=org.apache.commons.lang3",
+                "--add-opens=java.base/sun.nio.fs=org.apache.commons.lang3",
+                "--add-opens=java.base/sun.nio.ch=org.apache.commons.lang3",
+                "--add-opens=java.base/java.lang.ref=org.apache.commons.lang3",
+                "--add-opens=java.base/java.nio=org.apache.commons.lang3",
+                "--add-opens=java.base/java.nio.channels=org.apache.commons.lang3",
+                "--add-opens=java.base/java.nio.channels.spi=org.apache.commons.lang3",
+                "--add-opens=java.base/java.util.concurrent.atomic=org.apache.commons.lang3",
+                "--add-opens=java.base/java.util.jar=org.apache.commons.lang3",
+                "--add-opens=java.base/sun.nio.cs=org.apache.commons.lang3",
+                "--add-opens=java.base/java.nio.charset=org.apache.commons.lang3",
+                "--add-opens=java.base/java.net=org.apache.commons.lang3",
                 "--add-opens=java.desktop/java.awt=org.apache.commons.lang3",
                 "--add-opens=java.base/java.time.chrono=bw.core",
                 "--add-opens=javafx.controls/javafx.scene.control.skin=bw.core",
